[package]
name = "cccedict"
version = "0.2.1"
authors = ["Brian Kung <github@briankung.xyz>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/briankung/cccedict/"
homepage = "https://github.com/briankung/cccedict/"
description = "A CC-Cedict parser with Cantonese support (via cantonese.org readings)"
keywords = ["chinese", "cedict", "cantonese", "dictionary", "parser"]
categories = ["text-processing", "localization", "parser-implementations"]

[dependencies]
nom = "6.1.2"
